# tasr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  assignment.rs  basic.rs  bst.rs  buffer.rs  chain.rs  chaindb.rs  checker.rs  checkerdb.rs  chunkdb.rs  clause.rs  clausedb.rs  clauseset.rs  correctness.rs  database.rs  display.rs  formula.rs  hasher.rs  idflags.rs  idmap.rs  input.rs  integrity.rs  io.rs  lexer.rs  lib.rs  logger.rs  main.rs  mapping.rs  model.rs  parser.rs  proof.rs  propagation.rs  results.rs  split.rs  substitution.rs  tempfile.rs  testgen.rs  textparser.rs  trim.rs  unitpropagation.rs  (+1 more)
src/benchmarks/: benchmarking.rs
test/dimacs_lexer/: cnf0.txt  cnf1.txt  cnf2.txt  cnf3.txt  cnf4.txt  cnf5.txt  cnf6.txt  cnf7.txt  cnf8.txt  cnf9.txt
test/dimacs_proofs/: error0.asr  error1.asr  error2.asr  error3.asr  error4.asr  error5.asr  error6.asr  formula0.cnf  formula1.cnf  formula2.cnf  formula3.cnf  formula4.cnf  formula5.cnf  formula6.cnf  formula7.cnf  formula8.cnf  formula9.cnf  formulaE.cnf  proof0.asr  proof1.asr  proof2.asr  proof3.asr  proof4.asr  proof5.asr  proof6.asr  proof7.asr  proof8.asr  proof9.asr
test/file_reader/: filereader.txt
test/integrity/: id_conflict.asr  integrity.asr  integrity.cnf  invalid.asr  invalid.cnf  missing.asr  no_clauses.cnf  no_variables.cnf
test/text_parser/: expected_header.txt  expected_header1.txt  expected_header2.txt  expected_id.txt  expected_instruction1.txt  expected_instruction2.txt  expected_literal.txt  expected_number_clauses.txt  expected_number_variables.txt  expected_variable.txt  (+17 more)
