[package]
name = "tasr"
version = "0.3.0"
authors = ["Adrian Rebola-Pardo <arpj.rebola@gmail.com>"]
edition = "2018"
description = "ASR proof checker for SAT solving"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.5.3"
rand = "0.7"
clap = "2.33.1"
zstd = "0.5.3"
flate2 = "1.0.14"
bzip2 = "0.3.3"
xz2 = "0.1.6"
lz4 = "1.23.2"
colored = "1.9.3"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }